tests/scan/fixtures/validation/negative/clean_cargo_clean_web_framework/src/lib.rs
//! A clean Rust crate: clean_web_framework.

pub fn hello() -> &'static str { "hello" }
